# CPP

./: .gitignore  README.md
C/structures/: main  main.c
CMakeLearn/First/: CMakeLists.txt  test.cpp
CMakeLearn/headerTest/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  main.cpp  mainOut
CMakeLearn/openTest/: CMakeLists.txt  main.cpp
CMakeLearn/second/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  main.cpp
CMakeLearn/second/headers/: func.h
CMakeLearn/second/src/: func.cpp
GUI_kunnayma/: displayloop2.cpp  loop  main  main.cpp  makefile
MPI/arr_multiplier/: main  main.c  makefile
MPI/first/: README.md  makefile  mpi_hello_world
MPI/msg/: main  main.c  makefile
SDL/VOXEL_ENGINE/: app  main.cpp
SDL/basic/: main.cpp  makefile
SDL/cudaPixels/: makefile
SDL/first/: main  main.cpp
SDL/pixels/: main  main.cpp  makefile  test.cpp
SDL/shaders/: app  main.cpp  makefile
assembly/: hello  log.txt  makefile
assembly/from-c/: a.asm  main  main.cpp  main.cpp~
emacs_test/: test  test.c  test.c~
glfw/first/: a.out
huffman/: h  huffman.h  makefile  readwrite.cpp  rw  yeet.txt
lex/calc/: calc  (+6 more)
makeFiles/: a  hellomake.cpp  makefile
multiThreading/: a.out
navaneeth/: a.out  code-grid.c
openGL/: .simple.cpp.swp  a.out  compiling format  simple.cpp
preprocessor/: fcompiler  filename  filename.cpp  filename_compiler.cpp
sfml/: __Makefile
sound/: a.out  main.cpp
terminal_wrapper/: main  main.cpp  makefile
test/: a.out  time_test.cpp
vector/: a.out  main.cpp
virtual_machine/: main  main.c  makefile
(+170 files in other folders)
